<resources>
    <string name="app_name">@string/app_name_zh</string>
    <string name="main_tab_1">首页</string>
    <string name="main_tab_2">场景</string>
    <string name="main_tab_3">我的</string>
    <string name="main_tab_4">评测</string>
    <string name="main_tab_5">智能</string>
    <string name="app_logo_name">腾讯连连</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="error">错误</string>
    <string name="next">下一步</string>
    <string name="resend">重新发送</string>
    <string name="to_resend">重新发送(%ss)</string>
    <string name="finish">完成</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="confirm">确定</string>
    <string name="verify">确认</string>
    <string name="bind">绑定</string>
    <string name="commit">提交</string>
    <string name="delete">删除</string>
    <string name="modify_fail">修改失败</string>
    <string name="save">保存</string>
    <string name="refuse">拒绝</string>
    <string name="always_agree">始终允许</string>
    <string name="invite">接受</string>
    <string name="exit">退出</string>
    <string name="agree">同意</string>
    <string name="back">返回</string>
    <string name="back_home">返回首页</string>
    <string name="q_feedback">问题反馈</string>
    <string name="copy">已复制</string>
    <string name="copyed">已复制到剪切板</string>
    <string name="open_WIFI">请打开 WIFI</string>
    <string name="download_success">下载成功</string>
    <string name="download_failed">下载失败</string>
    <string name="wechat_share">微信好友</string>
    <string name="copy_link">复制链接</string>
    <string name="my_smart">我的智能</string>
    <string name="smart_log">执行日志</string>
    <string name="check_smart_after_login">请先登录后，再查看或添加智能</string>
    <string name="current_my_smart_no_data">当前暂无智能，点击添加智能</string>
    <string name="login_now">立即登录</string>
    <string name="add_now">立即添加</string>
    <string name="smart_option_1">手动智能</string>
    <string name="smart_option_2">自动智能</string>
    <string name="add_manual_smart">添加手动智能</string>
    <string name="edit_manual_smart">编辑手动智能</string>
    <string name="add_automic_smart">添加自动智能</string>
    <string name="edit_automic_smart">编辑自动智能</string>
    <string name="automic">自动</string>
    <string name="manual">手动</string>
    <string name="no_manual_task">暂无手动任务</string>
    <string name="no_log_info">当前暂无日志</string>
    <string name="add_task">添加任务</string>
    <string name="control_dev">设备控制</string>
    <string name="delay_time">延时</string>
    <string name="run_all_task">执行以下任务</string>
    <string name="delay_time_can_not_be_last_one">延时不能设置为最后一个任务</string>
    <string name="at_least_one_condition_2_start">至少包含一个条件</string>
    <string name="no_task_to_add">没有任务</string>
    <string name="complete_task_info">完善智能信息</string>
    <string name="smart_pic">智能图片</string>
    <string name="smart_name">智能名称</string>
    <string name="select_smart_pic">选择智能图片</string>
    <string name="add_smart_name">填写智能名称</string>
    <string name="select_dev">选择设备</string>
    <string name="current_dev_no_this_function">该设备暂无功能可作为智能任务，试试其他设备吧</string>
    <string name="please_input_smart_pic">请设置智能图片</string>
    <string name="please_input_smart_name">请设置智能名称</string>
    <string name="add_task_condition">添加条件</string>
    <string name="fit_all_condition">满足以下所有条件</string>
    <string name="fit_one_of_all_condition">满足以下任一条件</string>
    <string name="working_time">生效时间段</string>
    <string name="run_this_all_tasks">执行以下任务</string>
    <string name="dev_status_changed">设备状态发生变化</string>
    <string name="dev_timer">定时</string>
    <string name="sel_manual_task">选择手动</string>
    <string name="send_notification">发送通知</string>
    <string name="repeat_days">重复周期</string>
    <string name="defination_by_user">自定义</string>
    <string name="defination_by_user_with_content">自定义（%s）</string>
    <string name="work_time_all_day">全天（24小时）</string>
    <string name="work_time_all_day_tip">全天</string>
    <string name="working_time_tip">时间段</string>
    <string name="end_time_earlier_start_time">结束时间不能早于开始时间</string>
    <string name="at_least_select_one_day">请至少选择一天</string>
    <string name="select_notification_type">选择通知类型</string>
    <string name="select_manual_smart">选择手动智能</string>
    <string name="select_all">全选</string>
    <string name="disselect_all">取消全选</string>
    <string name="at_least_select_one_msg_type">请至少选择一种通知类型</string>
    <string name="equals_str">等于</string>
    <string name="run_manual_task_success">执行手动智能成功</string>
    <string name="success_update">修改成功</string>
    <string name="please_set_first">请先进行设置后保存</string>
    <string name="smart_not_work">智能失效</string>
    <string name="name_illeagal">名称不能超过20个字符</string>
    <string name="task_can_not_more_then_20">最多添加20个任务</string>
    <string name="condition_can_not_more_then_20">最多添加20个条件</string>
    <string name="success_update_close">关闭自动智能成功</string>
    <string name="success_update_open">打开自动智能成功</string>
    <string name="unknown_device">未知设备</string>
    <string name="please_add_task">请添加任务</string>
    <string name="no_manual_task_please_add_first">暂无手动智能，请先添加</string>
    <string name="please_select_other_dev">选择其他设备</string>
    <string name="delay_time_at_least_one_min">延时时长至少为1分钟</string>
    <string name="tag_gr">大于</string>
    <string name="tag_eq">等于</string>
    <string name="tag_lt">小于</string>
    <string name="delete_dev">删除设备</string>
    <string name="length_error">长度非法</string>
    <string name="country_or_place">国家/地区</string>
    <string name="default_product_name">（产品的名称）</string>
    <string name="share_dev_tip">设备共享</string>
    <string name="switch_time_zone_tip">确定切换时区吗</string>
    <string name="switch_time_zone_content">您切换时区将会同步更改您为家里的智能设备设置的定时、场景等任务时区，请知悉！</string>
    <string name="add_option_add_dev">添加设备</string>
    <string name="add_option_scan_dev">扫描设备</string>
    <string name="add_option_add_task">添加智能</string>
    <string name="outside_humidity">相对湿度 %s</string>
    <string name="outside_wind_dir">实况风向 %s</string>
    <string name="temp_unit">°</string>
    <string name="sunny_tag">晴</string>
    <string name="cloud_tag">阴</string>
    <string name="cloud_b_tag">云</string>
    <string name="rainy_tag">雨</string>
    <string name="snow_tag">雪</string>
    <string name="dry_tag">干燥</string>
    <string name="comfortable_tag">舒适</string>
    <string name="damp_tag">潮湿</string>
    <string name="seach_postion">搜索地点</string>
    <string name="map_select_postion">地图选点</string>
    <string name="num_rooms">%s个房间</string>
    <string name="no_weather_info">暂无天气信息</string>
    <string name="set_family_first">请先设置当前家庭位置</string>
    <string name="more_option">更多操作</string>
    <string name="search">搜索</string>
    <string name="no_history_tip">还没有历史记录哦~</string>
    <string name="clear_all_history">清空历史记录</string>
    <string name="resp_with_no_data">没有找到匹配的结果</string>
    <string name="please_enter_pwd">请输入密码</string>
    <string name="get_code">获取验证码</string>
    <string name="conutry_code_num">&#160;(+%s)</string>
    <string name="please_choose">请选择</string>
    <string name="wechat_login">微信登录</string>
    <string name="email_login">邮箱登录</string>
    <string name="phone_login">手机登录</string>
    <string name="default_country">中国大陆</string>
    <string name="email_forgot">使用邮箱账号</string>
    <string name="phone_forgot">使用手机账号</string>
    <string name="email_to_register">使用邮箱注册</string>
    <string name="mobile_phone_number_to_register">使用手机注册</string>
    <string name="mobile_phone_register">手机注册</string>
    <string name="email_register">邮箱注册</string>
    <string name="register_agree_1">同意并遵守腾讯云</string>
    <string name="register_agree_2">用户协议</string>
    <string name="register_agree_3">及</string>
    <string name="register_agree_4">隐私政策</string>
    <string name="register_agree_4_low">隐私政策</string>
    <string name="summary_of_privacy_policy">隐私政策摘要</string>
    <string name="pause_mark">、</string>
    <string name="register_agree_5">开源软件信息</string>
    <string name="register_get_code">获取验证码</string>
    <string name="get_mobile_code_sent">验证码已经发送到您的手机:</string>
    <string name="get_email_code_sent">验证码已经发送到您的邮箱:</string>
    <string name="not_wechat_client">未安装微信客户端</string>
    <string name="not_install_wechat_client">微信未安装，请安装后重试</string>
    <string name="cancel_wechat">取消授权</string>
    <string name="input_birthday_for_better_react">出生日期</string>
    <string name="usa_too_young_to_use">由于您未满十三周岁，暂无法使用我们的产品服务。</string>
    <string name="mainland_too_young_to_use">由于您未满十八周岁，暂无法使用我们的产品服务。</string>
    <string name="location_failed">定位失败</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="register">注册</string>
    <string name="register_account">注册账号</string>
    <string name="account">账号</string>
    <string name="get_sms_code">手机验证码</string>
    <string name="verification_code">验证码</string>
    <string name="input_verification_code">输入验证码</string>
    <string name="mobile_number">手机号码</string>
    <string name="mobile_num">手机号</string>
    <string name="email_address">邮箱地址</string>
    <string name="email_address_no_line">邮箱地址</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="new_password_equals_old">新密码不能与旧密码相同</string>
    <string name="verify_password">再次输入密码</string>
    <string name="forgot_password">忘记密码</string>
    <string name="find_bank_the_password">找回密码</string>
    <string name="set_password">设置密码</string>
    <string name="set_password_success">密码设置成功</string>
    <string name="country_code">选择国家和地区</string>
    <string name="hot_country">热门国家和地区</string>
    <string name="copyright">Copyright @ 2013&#8211;2020 Tencent Cloud.All Right Reserved.\n腾讯云 版权所有</string>
    <string name="message_notification">消息通知</string>
    <string name="help_center">帮助中心</string>
    <string name="feedback">意见反馈</string>
    <string name="about_me">关于我们</string>
    <string name="current_version">当前版本 %s</string>
    <string name="set_avatar">设置头像</string>
    <string name="take_photo">拍照</string>
    <string name="select_local_album">从手机相册选取</string>
    <string name="connect_fail">连接失败</string>
    <string name="connect_again">按步骤重试</string>
    <string name="tab_connect_way">切换配网方式</string>
    <string name="see_more_fail_cause">查看更多失败原因</string>
    <string name="connect_step">1、检查设备是否通电，并按照指引进入配网模式\n
2、检查WIFI是否正常（暂时只支持2.4G路由器）\n
3、检查WIFI密码是否错误
</string>
    <string name="smart_config_first">将设备设置为一键配网模式</string>
    <string name="smart_config_first_hint">若指示灯已经在快闪，可跳过该步骤。</string>
    <string name="smart_config_first_hint2">1.接通设备电源；\n2.长按复位键（开关），切换设备配网模式到一键配网（不同设备操作方式有所不同）；\n3.指示灯快闪即进入一键配网模式。</string>
    <string name="smart_config_first_title">提示灯在快闪</string>
    <string name="upgrade_tip">版本升级V2.0</string>
    <string name="repair_bug">1、修复了一些已知 bug</string>
    <string name="version_code">版本号</string>
    <string name="package_size">安装包大小</string>
    <string name="publish_time">发布时间</string>
    <string name="next_time">下次再说</string>
    <string name="upgrade_now">立即升级</string>
    <string name="logout_text">注销</string>
    <string name="logout_must_know">注销须知</string>
    <string name="logout_text_for_attention1">请您确保账号处于安全状态下且是本人申请注销。注销账号是不可恢复的操作，账号被注销后，您账号下的所有信息、数据将被永久删除，无法找回。为避免您的损失，请谨慎进行账号注销操作。</string>
    <string name="logout_text_will_logout_at">如果您确定“注销账号”，账号将注销于</string>
    <string name="logout_text_logout_time">2020年8月3日 00:00:00</string>
    <string name="logout_text_for_attention2">若您在注销日期前登录腾讯连连，则自动撤销“注销账号”申请。</string>
    <string name="logout_text_for_attention3">注：如腾讯连连账号是通过第三方软件（微信） 进行登录的，您所注销的账号仅影响腾讯连连内的账号与数据，并不会影响您在微信的账号信息。</string>
    <string name="tencentll_account_logout_agreement">《腾讯连连账号注销协议》</string>
    <string name="already_known">我已了解</string>
    <string name="celsius_unit">℃</string>
    <string name="fahrenheit_unit">℉</string>
</resources>