<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--    返回键-->
    <include layout="@layout/menu_back_layout"
        android:id="@+id/menu_logout"/>

    <TextView
        android:id="@+id/tv_logout_current_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/ts_24"
        android:textColor="@color/black_15161A"
        android:textStyle="bold"
        android:text="@string/logout_must_know"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_logout"/>

    <TextView
        android:id="@+id/tv_logout_text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/ts_16"
        android:textStyle="bold"
        android:textColor="@color/black_15161A"
        android:text="@string/logout_text_for_attention1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logout_current_account"/>

    <TextView
        android:id="@+id/tv_logout_text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/ts_16"
        android:textStyle="bold"
        android:textColor="@color/black_15161A"
        android:text="@string/logout_text_will_logout_at"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logout_text1"/>

    <TextView
        android:id="@+id/tv_logout_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/ts_16"
        android:textStyle="bold"
        android:textColor="@color/black_15161A"
        android:text="@string/logout_text_logout_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logout_text2"/>

    <TextView
        android:id="@+id/tv_logout_text3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/ts_16"
        android:textStyle="bold"
        android:textColor="@color/black_15161A"
        android:text="@string/logout_text_for_attention2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logout_time"/>

    <TextView
        android:id="@+id/tv_logout_text4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/ts_16"
        android:textColor="@color/black_15161A"
        android:text="@string/logout_text_for_attention3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logout_text3"/>

    <LinearLayout
        android:id="@+id/logout_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_logout">

        <ImageView
            android:id="@+id/iv_logout_agreement"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="7dp"
            android:src="@mipmap/icon_unselected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="@string/already_known"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/ts_16" />

        <TextView
            android:id="@+id/tv_logout_account_agreement"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/tencentll_account_logout_agreement"
            android:textColor="@color/blue_0052d9"
            android:textSize="@dimen/ts_16" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout_text"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/red_FA5151"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>