<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/image_unconnected"/>

    <TextView
            android:id="@+id/tv_connect_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:text="@string/connect_fail"
            android:textColor="@color/red_e54545"
            android:textSize="@dimen/ts_20"
            android:textStyle="bold" />
    
    <TextView
            android:id="@+id/tv_connect_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_connect_status"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/connect_step"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/ts_14" />

    <TextView
            android:id="@+id/tv_connect_more_cause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_connect_step"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/see_more_fail_cause"
            android:textColor="@color/blue_0052d9"
            android:textSize="@dimen/ts_16" />


    <TextView
            android:id="@+id/tv_connect_again"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_above="@+id/tv_tab_connect_way"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/btn_rad4_stoken_color_dddddd"
            android:gravity="center"
            android:text="@string/connect_again"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/ts_20" />

    <TextView
            android:id="@+id/tv_tab_connect_way"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_rad4_color_0052d9"
            android:gravity="center"
            android:text="@string/tab_connect_way"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_20"
            android:layout_marginBottom="30dp" />

</RelativeLayout>