<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/smart_config_first"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/ts_18"
            android:textStyle="bold" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:text="@string/smart_config_first_hint"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/ts_16" />

    <ImageView
            android:id="@+id/iv_smart_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="111dp"
            android:layout_marginEnd="30dp"
            android:src="@mipmap/image_smart_config" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_smart_config"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/smart_config_first_hint2"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/ts_16" />

    <TextView
            android:id="@+id/tv_smart_first_commit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/iv_smart_config"
            android:layout_marginStart="16dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_rad4_color_006eff"
            android:gravity="center"
            android:text="@string/smart_config_first_title"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_16" />

</merge>