<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_fahrenheit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/fahrenheit_unit"
        android:textColor="@color/black_15161A"
        android:textSize="@dimen/ts_16"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_F2F4F5" />

    <TextView
        android:id="@+id/tv_celsius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/celsius_unit"
        android:textColor="@color/black_15161A"
        android:textSize="@dimen/ts_16"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/line_F2F4F5" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/cancel"
        android:textColor="@color/black_15161A"
        android:textSize="@dimen/ts_16"/>

</LinearLayout>