<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/upgrade_dialog_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <RelativeLayout
        android:id="@+id/upgrade_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_failed_cell"
        android:paddingTop="30dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/tv_upgrade_tip"
            android:text="@string/upgrade_tip"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_upgrade_log"
            android:text="@string/repair_bug"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_upgrade_tip"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            />

        <RelativeLayout
            android:id="@+id/layout_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_upgrade_log"
            android:padding="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/background_grey_cell"
            >

        <TextView
            android:id="@+id/tv_version"
            android:text="@string/version_code"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tv_package_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/tv_version"
            android:text="@string/package_size"
            />
        <TextView
            android:id="@+id/tv_publish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/tv_package_size"
            android:text="@string/publish_time"
            />

        </RelativeLayout>
        <View
            android:id="@+id/divid_line_h"
            android:layout_width="match_parent"
            android:background="@color/line_grey_color"
            android:layout_below="@id/layout_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:layout_height="1dp"/>
        <View
            android:id="@+id/divid_line"
            android:layout_width="1dp"
            android:background="@color/line_grey_color"
            android:layout_below="@id/layout_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:layout_height="1dp"/>
        <View
            android:id="@+id/divid_line_v"
            android:layout_width="1dp"
            android:background="@color/line_grey_color"
            android:layout_below="@id/layout_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_next"/>

        <TextView
            android:id="@+id/tv_next"
            android:layout_below="@id/divid_line"
            android:text="@string/next_time"
            android:layout_toLeftOf="@id/divid_line"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/black_888888"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_upgrade_now"
            android:layout_below="@id/divid_line"
            android:text="@string/upgrade_now"
            android:layout_toRightOf="@id/divid_line"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/complete_progress"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
